# photo-video-manager

./: README.md  pyproject.toml  requirements.txt
src/: config.py  main.py
src/controllers/: photo_controller.py  video_controller.py
src/editors/: photo_editor.py  video_editor.py
src/models/: edit_metadata.py  photo.py  video.py
src/storage/: json_handler.py  xml_handler.py
src/ui/: main_window.py  main_window.ui  main_window_ui.py
src/utils/: file_utils.py
