[tool.poetry]
name = "photo-video-manager"
version = "0.1.0"
description = "A cross-platform application for managing photos and videos with non-destructive editing."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyQt6 = "^6.0"
lxml = "^4.6"
jsonschema = "^4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"