[project]
name = "python-pixel-porter"
description = "Python Pixel Porter (P³): A photo and video manager for organizing, viewing, and editing your media."
authors = ["enveezee <https://github.com/enveezee>"]
license = "MIT"

[tool.poetry]
name = "python-pixel-porter"
version = "0.1.0"
description = "Python Pixel Porter (P³): A photo and video manager for organizing, viewing, and editing your media."
authors = ["enveezee <https://github.com/enveezee>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyQt6 = "^6.0"
lxml = "^4.6"
jsonschema = "^4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"